# ecosysteme-des-donnees

./: .dockerignore  .gitignore  README.md  docker-compose.yml  makefile  pyproject.toml
.github/workflows/: ci.yml
assets/styles/: style.css
docker/: api.Dockerfile  dashboard.Dockerfile
src/: __init.py__  api.py  dashboard.py  database.py  fake_vampire.py  model.py  rival.py  rival_ip.py
tests/: test_model.py
